<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray"
        tools:context=".ui.DescriptionActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:shapeAppearance="@color/white">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/back"
                        android:layout_width="50dp"
                        android:layout_height="40dp"
                        android:paddingStart="12dp"
                        android:paddingTop="8dp"
                        android:paddingEnd="5dp"
                        android:paddingBottom="8dp"
                        android:src="@drawable/left_arrow"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/txtCompanyName"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:ellipsize="end"
                        android:fontFamily="@font/lato_regular"
                        android:gravity="center"
                        android:hint="@string/app_name"
                        android:maxLines="1"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolBar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvImage"
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    android:layout_marginTop="10dp"
                    android:elevation="12dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/imageCompany"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/a1"
                        android:scaleType="fitXY" />

                </androidx.cardview.widget.CardView>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/cvImage">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cvDesc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="5dp"
                        android:layout_marginTop="5dp"
                        android:elevation="15dp"
                        app:cardCornerRadius="10dp"
                        app:cardUseCompatPadding="true"
                        app:layout_constraintTop_toTopOf="parent">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="#F9F9F9"
                            android:orientation="vertical"
                            android:paddingVertical="5dp">

                            <TextView
                                android:id="@+id/description"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="12dp"
                                android:layout_marginTop="5dp"
                                android:fontFamily="@font/lato_regular"
                                android:text="@string/description"
                                android:textColor="@color/black"
                                android:textSize="15sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/txtDescription"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginVertical="5dp"
                                android:layout_marginStart="12dp"
                                android:layout_marginEnd="15dp"
                                android:fontFamily="@font/lato_regular"
                                android:textColor="@color/black"
                                android:textSize="14sp" />

                        </LinearLayout>


                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="55dp"
                        android:elevation="15dp"
                        app:cardCornerRadius="10dp"
                        app:cardUseCompatPadding="true"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/cvDesc">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="#F9F9F9">

                            <TextView
                                android:id="@+id/symbol"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="12dp"
                                android:layout_marginTop="12dp"
                                android:fontFamily="@font/lato_regular"
                                android:text="@string/symbol"
                                android:textColor="@color/black"
                                android:textSize="15sp"
                                android:textStyle="bold"
                                app:layout_constraintLeft_toLeftOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:id="@+id/txtSymbol"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/lato_regular"
                                android:layout_marginStart="5dp"
                                android:textColor="@color/black"
                                android:textSize="14sp"
                                app:layout_constraintBottom_toBottomOf="@+id/symbol"
                                app:layout_constraintLeft_toRightOf="@+id/symbol" />

                            <TextView
                                android:id="@+id/target"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="12dp"
                                android:layout_marginTop="12dp"
                                android:text="@string/target"
                                android:fontFamily="@font/lato_regular"
                                android:textColor="@color/black"
                                android:textSize="15sp"
                                android:textStyle="bold"
                                app:layout_constraintLeft_toLeftOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/symbol" />


                            <TextView
                                android:id="@+id/txtTarget"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:textColor="@color/black"
                                android:fontFamily="@font/lato_regular"
                                android:textSize="14sp"
                                app:layout_constraintBottom_toBottomOf="@+id/target"
                                app:layout_constraintLeft_toRightOf="@+id/target" />


                            <TextView
                                android:id="@+id/stopLoss"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="15dp"
                                android:fontFamily="@font/lato_regular"
                                android:text="@string/stop_loss"
                                android:textColor="@color/black"
                                android:textSize="15sp"
                                android:textStyle="bold"
                                app:layout_constraintLeft_toLeftOf="@id/target"
                                app:layout_constraintTop_toBottomOf="@+id/target" />


                            <TextView
                                android:id="@+id/txtStopLoss"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:fontFamily="@font/lato_regular"
                                android:textColor="@color/black"
                                android:textSize="14sp"
                                app:layout_constraintLeft_toRightOf="@+id/stopLoss"
                                app:layout_constraintTop_toTopOf="@id/stopLoss" />

                            <TextView
                                android:id="@+id/stockType"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="15dp"
                                android:fontFamily="@font/lato_regular"
                                android:text="@string/company_type"
                                android:textColor="@color/black"
                                android:textSize="15sp"
                                android:textStyle="bold"
                                app:layout_constraintLeft_toLeftOf="@id/target"
                                app:layout_constraintTop_toBottomOf="@+id/stopLoss" />

                            <TextView
                                android:id="@+id/txtStockType"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:fontFamily="@font/lato_regular"
                                android:textColor="@color/black"
                                android:textSize="14sp"
                                app:layout_constraintBottom_toBottomOf="@+id/stockType"
                                app:layout_constraintLeft_toRightOf="@id/stockType" />


                            <TextView
                                android:id="@+id/shareType"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="15dp"
                                android:fontFamily="@font/lato_regular"
                                android:text="@string/type_of_share"
                                android:textColor="@color/black"
                                android:textSize="15sp"
                                android:textStyle="bold"
                                app:layout_constraintLeft_toLeftOf="@id/target"
                                app:layout_constraintTop_toBottomOf="@+id/stockType" />


                            <TextView
                                android:id="@+id/txtShareType"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:fontFamily="@font/lato_regular"
                                android:textColor="@color/black"
                                android:textSize="14sp"
                                app:layout_constraintBottom_toBottomOf="@id/shareType"
                                app:layout_constraintLeft_toRightOf="@+id/shareType" />

                            <TextView
                                android:id="@+id/tradeType"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginVertical="15dp"
                                android:fontFamily="@font/lato_regular"
                                android:text="@string/type_of_trading"
                                android:textColor="@color/black"
                                android:textSize="15sp"
                                android:textStyle="bold"
                                app:layout_constraintLeft_toLeftOf="@id/target"
                                app:layout_constraintTop_toBottomOf="@+id/shareType" />


                            <TextView
                                android:id="@+id/txtTradeType"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:fontFamily="@font/lato_regular"
                                android:textColor="@color/black"
                                android:textSize="14sp"
                                app:layout_constraintBottom_toBottomOf="@id/tradeType"
                                app:layout_constraintLeft_toRightOf="@+id/tradeType" />


                            <TextView
                                android:id="@+id/date"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginVertical="15dp"
                                android:fontFamily="@font/lato_regular"
                                android:text="@string/published_on_1"
                                android:textColor="@color/black"
                                android:textSize="15sp"
                                android:textStyle="bold"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintLeft_toLeftOf="@id/target"
                                app:layout_constraintTop_toBottomOf="@+id/tradeType" />


                            <TextView
                                android:id="@+id/txtDate"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:fontFamily="@font/lato_regular"
                                android:textColor="@color/black"
                                android:textSize="14sp"
                                app:layout_constraintBottom_toBottomOf="@id/date"
                                app:layout_constraintLeft_toRightOf="@+id/date" />

                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </androidx.cardview.widget.CardView>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

        <RelativeLayout
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            ads:layout_constraintBottom_toBottomOf="parent"
            ads:layout_constraintLeft_toLeftOf="parent"
            ads:layout_constraintRight_toRightOf="parent">

        </RelativeLayout>

        <ProgressBar
            android:id="@+id/descriptionProgressBar"
            android:layout_width="wrap_content"
            android:indeterminateTint="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="wrap_content"/>

        <!--            ads:adUnitId="@string/banner_ad_Id"-->

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
